sass/revamp-design/_accordion.sass
// ACCORDION FPP
/////////////////

// FPP container and title
.pane-bundle-accordion
  @extend %bg-border-and-box-shadow
  padding: 10px 26px
  h2.pane-title
    border-bottom: 2px #e1e5e4 solid
    color: $text-black
    font-family: $font-sans
    font-size: 22px
    font-weight: bold
    line-height: 1.2
    margin-top: 10px
    padding-bottom: 10px

// Toggle Functionality
.accordion-toggle
  display: none

.accordion-toggle.opened,
.opened .accordion-toggle
  &:after
    content: "d"

// Icons fix
.field-name-field-accordion-item #___page_0 iframe
  height: 470px !important

.acc-title,
.acc-body
  clear: both

  // Accordion item styling
.acc-title
  border-top: 2px #e1e5e4 solid
  cursor: pointer
  font-size: 20px
  font-family: $font-demi
  line-height: 1.2
  margin-bottom: 0
  margin-left: 0
  padding: 4px 8px 12px 5px
  &:before
    content: "c"
    font-family: "gsb"
    font-size: 26px
    color: $red
    font-weight: normal
    width: 30px
    display: inline-block
  &:hover
    &:before
      color: $text-blue
  &.opened
    &:before
      content: "d"

// Accordion body
.accordion-body-wrap
  display: none
  .acc-body
    padding-bottom: 12px
    padding-left: 36px

// Border for FPP
.pane-bundle-accordion
  .field-collection-item-field-accordion-item:first-of-type
    .acc-title
      border-top: 0

